// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilteredResults Should match snapshot: has results 1`] = `
<div
  class="filtered-results"
>
  <div
    class="filtered-results__inner"
  >
    <h4
      class="filtered-results__title"
    >
      
  6 results found with 
      <strong>
        0 filters
      </strong>
       applied.
  (
      <span
        class="filtered-results__title-notice text-italic text-bold"
      >
        
    Apply filters to show you Domestic undergraduate options?
  
      </span>
      )

    </h4>
     
    <div
      class="filtered-results__content"
    >
      <div
        class="filtered-results__items"
      />
    </div>
  </div>
</div>
`;

exports[`FilteredResults Should match snapshot: no results 1`] = `
<div
  class="filtered-results"
>
  <div
    class="filtered-results__inner"
  >
    <h4
      class="filtered-results__title"
    >
      
  0 results found with 
      <strong>
        0 filters
      </strong>
       applied.
  (
      <span
        class="filtered-results__title-notice text-italic text-bold"
      >
        
    Apply filters to show you Domestic undergraduate options?
  
      </span>
      )

    </h4>
     
    <div
      class="filtered-results__content"
    >
      <div
        class="filtered-results__no-items"
      >
        <h3>
          No results
        </h3>
      </div>
    </div>
  </div>
</div>
`;
